apps/applications/iot/z2mqtt/app/deployment.yaml
# 8-z2m-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: ghcr.io/koenkk/zigbee2mqtt:2.6.1
          ports:
            - containerPort: 8080
              name: frontend
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data-pvc
        - name: config
          configMap:
            name: zigbee2mqtt-config
