apps/applications/iot/z2mqtt/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "zigbee.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt-svc
          port: 8080
